[package]
name = "randomorg"
version = "1.0.4"
authors = ["Victor Polevoy <fx@thefx.co>"]
description = """
A random.org client library. The randomness comes from atmospheric noise, which \
for many purposes is better than the pseudo-random number algorithms typically used in computer \
programs."""
repository = "https://github.com/vityafx/randomorg"
documentation = "https://docs.rs/randomorg/"
readme = "README.md"
license = "MIT"
keywords = ["random", "api", "prng", "generator", "rand"]
categories = ["api-bindings", "cryptography"]
build = "build.rs"
edition = "2018"

[badges]
travis-ci = { repository = "vityafx/randomorg" }

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand_core = { optional = true, version = "0.6", features = ["std"] }
log = { optional = true, version = "0.4" }

[build-dependencies]
vergen = "5"

[features]
default = []
rng = ["rand_core", "log"]
